--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap');
     </style>
-    <title>Начало</title>
+    <title>Extraordinary Decals</title>
 </head>
 
 <body>
