--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <a href="#"><img src="./images/13253_rockshox_xc30tk_forks_27_5_2014-750x750.jpg" alt="">
                             </a>
                             <a href="#"><img src="./images/ramka-cross-traction-cena.jpg" alt=""> </a>
-                            <a href="#">Майка ти</a>
+                            <a href="#"></a>
                         </div>
                     </div>
                 </li>
@@ -78,7 +78,7 @@
         
         <div class="gallery">
 
-            <h1 id="vilki">Вилки да го еба</h1>
+            <h1 id="vilki">Вилки</h1>
 
             <h3 id="rockshock">FoxBox</h3>
             <div>
