--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/lightbox.min.css">
+    <link rel="stylesheet" href="./css/media.css">
     <script src="./js/lightbox-plus-jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Jost:wght@300&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
